# PromptCaddy

./: .gitignore  README.en.md  README.md  README.zh-TW.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  main.rs
src/api/: index.ts
src/components/: AboutPage.tsx  ContentArea.tsx  DraggablePromptCard.tsx  EditPanel.tsx  FullscreenEditor.tsx  Management.tsx  PromptCard.tsx  SearchBar.tsx  Settings.tsx  Sidebar.tsx  TagManagement.tsx  Toaster.tsx  VariableFillDialog.tsx
src/i18n/: index.ts
src/i18n/locales/: en.ts  zh-CN.ts
src/store/: index.ts
src/types/: index.ts
src/utils/: category.ts  date.ts  export.ts  exportPath.ts  highlight.tsx  shortcuts.ts  tagColors.ts  theme.ts
